<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/your_bluetooth_device_name"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/activityMain_TXT_myBluetoothName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bluetooth_name_value"
                android:textColor="@color/black"/>
        </LinearLayout>

        <Button
            android:id="@+id/activityMain_BTN_startScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_scan"
            android:layout_gravity="center"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activityMain_RV_bluetoothDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>
